fix overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -6064,7 +6064,7 @@ button.testimonial-arrow-btn {
     padding-top: 7px; }
 
 .blog-details-wrapper .comment-respond {
-  margin-top: 94px;
+  margin-top: 78px;
   margin-bottom: 40px; }
 .blog-details-wrapper .post-comments {
   margin-top: 0; }
