--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -30,7 +30,7 @@
 }
 .blog-details-wrapper {
   .comment-respond {
-    margin-top: 94px;
+    margin-top: 78px;
     margin-bottom: 40px;
   }
   .post-comments {
